src/parse/gm_grammer.output
Nonterminals useless in grammar

   numeric_expr


Terminals unused in grammar

   T_RBFS
   T_TO
   T_EMPTYLINE


Rules useless in grammar

  184 numeric_expr: expr


State 221 conflicts: 1 shift/reduce
State 298 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: /* empty */
    2     | prog proc_def

    3 proc_def: proc_head proc_body

    4 proc_head: proc_name '(' arg_declist1 ')' proc_return_opt
    5          | proc_name '(' arg_declist1 ';' arg_declist2 ')' proc_return_opt

    6 proc_name: T_PROC id

    7 arg_declist1: /* empty */
    8             | arg_declist

    9 arg_declist: arg_decl
   10            | arg_declist ',' arg_decl

   11 arg_declist2: arg_decl
   12             | arg_declist2 ',' arg_decl

   13 proc_return_opt: /* empty */
   14                | proc_return

   15 proc_return: ':' prim_type

   16 arg_decl: arg_target ':' typedecl

   17 arg_target: id_comma_list

   18 typedecl: prim_type
   19         | graph_type
   20         | property
   21         | nodeedge_type
   22         | set_type

   23 graph_type: T_GRAPH

   24 prim_type: T_INT
   25          | T_LONG
   26          | T_FLOAT
   27          | T_DOUBLE
   28          | T_BOOL

   29 nodeedge_type: node_type
   30              | edge_type

   31 node_type: T_NODE '(' id ')'

   32 edge_type: T_EDGE '(' id ')'

   33 set_type: T_NSET '(' id ')'
   34         | T_NSEQ '(' id ')'
   35         | T_NORDER '(' id ')'

   36 property: T_NODEPROP '<' prim_type '>' '(' id ')'
   37         | T_EDGEPROP '<' prim_type '>' '(' id ')'

   38 id_comma_list: id
   39              | id_comma_list ',' id

   40 proc_body: sent_block

   41 sent_block: sb_begin sent_list sb_end

   42 sb_begin: '{'

   43 sb_end: '}'

   44 sent_list: /* empty */
   45          | sent_list sent

   46 sent: sent_assignment ';'
   47     | sent_variable_decl ';'
   48     | sent_block
   49     | sent_foreach
   50     | sent_if
   51     | sent_reduce_assignment ';'
   52     | sent_defer_assignment ';'
   53     | sent_do_while ';'
   54     | sent_while
   55     | sent_return ';'
   56     | sent_bfs
   57     | sent_dfs
   58     | sent_call ';'
   59     | sent_user ';'
   60     | sent_argminmax_assignment ';'
   61     | ';'

   62 sent_call: built_in

   63 sent_while: T_WHILE '(' bool_expr ')' sent_block

   64 sent_do_while: T_DO sent_block T_WHILE '(' bool_expr ')'

   65 sent_foreach: T_FOREACH foreach_header foreach_filter sent
   66             | T_FOR foreach_header foreach_filter sent

   67 foreach_header: '(' id ':' id '.' iterator1 ')'
   68               | '(' id ':' id '+' '.' iterator1 ')'
   69               | '(' id ':' id '-' '.' iterator1 ')'

   70 foreach_filter: /* empty */
   71               | '(' bool_expr ')'

   72 iterator1: T_NODES
   73          | T_EDGES
   74          | T_NBRS
   75          | T_IN_NBRS
   76          | T_UP_NBRS
   77          | T_DOWN_NBRS
   78          | T_ITEMS
   79          | T_COMMON_NBRS '(' id ')'

   80 sent_dfs: T_DFS bfs_header_format bfs_filters sent_block dfs_post

   81 sent_bfs: T_BFS bfs_header_format bfs_filters sent_block bfs_reverse

   82 dfs_post: /* empty */
   83         | T_POST bfs_filter sent_block
   84         | T_POST sent_block

   85 bfs_reverse: /* empty */
   86            | T_BACK bfs_filter sent_block
   87            | T_BACK sent_block

   88 bfs_header_format: '(' id ':' id opt_tp '.' T_NODES from_or_semi id ')'

   89 opt_tp: /* empty */
   90       | '^'

   91 from_or_semi: T_FROM
   92             | ';'

   93 bfs_filters: /* empty */
   94            | bfs_navigator
   95            | bfs_filter
   96            | bfs_navigator bfs_filter
   97            | bfs_filter bfs_navigator

   98 bfs_navigator: '[' expr ']'

   99 bfs_filter: '(' expr ')'

  100 sent_variable_decl: typedecl var_target
  101                   | typedecl id '=' rhs

  102 var_target: id_comma_list

  103 sent_assignment: lhs '=' rhs

  104 sent_reduce_assignment: lhs reduce_eq rhs optional_bind
  105                       | lhs T_PLUSPLUS optional_bind

  106 sent_defer_assignment: lhs T_LE rhs optional_bind

  107 sent_argminmax_assignment: lhs_list2 minmax_eq rhs_list2 optional_bind

  108 optional_bind: /* empty */
  109              | '@' id

  110 reduce_eq: T_PLUSEQ
  111          | T_MULTEQ
  112          | T_MINEQ
  113          | T_MAXEQ
  114          | T_ANDEQ
  115          | T_OREQ

  116 minmax_eq: T_MINEQ
  117          | T_MAXEQ

  118 rhs: expr

  119 sent_return: T_RETURN expr
  120            | T_RETURN

  121 sent_if: T_IF '(' bool_expr ')' sent
  122        | T_IF '(' bool_expr ')' sent T_ELSE sent

  123 sent_user: expr_user
  124          | expr_user T_DOUBLE_COLON '[' lhs_list ']'

  125 expr: '(' expr ')'
  126     | '|' expr '|'
  127     | '-' expr
  128     | '!' expr
  129     | '(' prim_type ')' expr
  130     | reduce_op '(' id ':' id '.' iterator1 ')' '(' expr ')' '{' expr '}'
  131     | reduce_op '(' id ':' id '.' iterator1 ')' '{' expr '}'
  132     | reduce_op2 '(' id ':' id '.' iterator1 ')' '(' expr ')'
  133     | reduce_op2 '(' id ':' id '.' iterator1 ')'
  134     | expr '%' expr
  135     | expr '*' expr
  136     | expr '/' expr
  137     | expr '+' expr
  138     | expr '-' expr
  139     | expr T_LE expr
  140     | expr T_GE expr
  141     | expr '<' expr
  142     | expr '>' expr
  143     | expr T_EQ expr
  144     | expr T_NEQ expr
  145     | expr T_AND expr
  146     | expr T_OR expr
  147     | expr '?' expr ':' expr
  148     | BOOL_VAL
  149     | INT_NUM
  150     | FLOAT_NUM
  151     | inf
  152     | scala
  153     | field
  154     | built_in
  155     | expr_user

  156 bool_expr: expr

  157 reduce_op: T_SUM
  158          | T_PRODUCT
  159          | T_MIN
  160          | T_MAX
  161          | T_EXIST
  162          | T_ALL
  163          | T_AVG

  164 reduce_op2: T_COUNT

  165 inf: T_P_INF
  166    | T_M_INF

  167 lhs: scala
  168    | field

  169 lhs_list: lhs
  170         | lhs ',' lhs_list

  171 scala: id

  172 field: id '.' id

  173 built_in: id '.' id arg_list
  174         | id arg_list

  175 arg_list: '(' expr_list ')'
  176         | '(' ')'

  177 expr_list: expr
  178          | expr ',' expr_list

  179 lhs_list2: '<' lhs ';' lhs_list '>'

  180 rhs_list2: '<' expr ';' expr_list '>'

  181 $@1: /* empty */

  182 expr_user: '[' $@1 USER_TEXT ']'

  183 id: ID


Terminals, with rules where they appear

$end (0) 0
'!' (33) 128
'%' (37) 134
'(' (40) 4 5 31 32 33 34 35 36 37 63 64 67 68 69 71 79 88 99 121 122
    125 129 130 131 132 133 175 176
')' (41) 4 5 31 32 33 34 35 36 37 63 64 67 68 69 71 79 88 99 121 122
    125 129 130 131 132 133 175 176
'*' (42) 135
'+' (43) 68 137
',' (44) 10 12 39 170 178
'-' (45) 69 127 138
'.' (46) 67 68 69 88 130 131 132 133 172 173
'/' (47) 136
':' (58) 15 16 67 68 69 88 130 131 132 133 147
';' (59) 5 46 47 51 52 53 55 58 59 60 61 92 179 180
'<' (60) 36 37 141 179 180
'=' (61) 101 103
'>' (62) 36 37 142 179 180
'?' (63) 147
'@' (64) 109
'[' (91) 98 124 182
']' (93) 98 124 182
'^' (94) 90
'{' (123) 42 130 131
'|' (124) 126
'}' (125) 43 130 131
error (256)
T_PROC (258) 6
T_GRAPH (259) 23
T_NODE (260) 31
T_NODEPROP (261) 36
T_EDGE (262) 32
T_EDGEPROP (263) 37
T_NSET (264) 33
T_NORDER (265) 35
T_NSEQ (266) 34
T_ITEMS (267) 78
T_DFS (268) 80
T_POST (269) 83 84
T_INT (270) 24
T_FLOAT (271) 26
T_BOOL (272) 28
T_DOUBLE (273) 27
T_LONG (274) 25
T_RETURN (275) 119 120
T_BFS (276) 81
T_RBFS (277)
T_FROM (278) 91
T_TO (279)
T_BACK (280) 86 87
T_FOREACH (281) 65
T_FOR (282) 66
T_NODES (283) 72 88
T_EDGES (284) 73
T_NBRS (285) 74
T_IN_NBRS (286) 75
T_UP_NBRS (287) 76
T_DOWN_NBRS (288) 77
T_COMMON_NBRS (289) 79
T_SUM (290) 157
T_PRODUCT (291) 158
T_MIN (292) 159
T_MAX (293) 160
T_COUNT (294) 164
T_ALL (295) 162
T_EXIST (296) 161
T_AVG (297) 163
T_EMPTYLINE (298)
T_AND (299) 145
T_OR (300) 146
T_EQ (301) 143
T_NEQ (302) 144
T_LE (303) 106 139
T_GE (304) 140
T_IF (305) 121 122
T_ELSE (306) 122
T_DO (307) 64
T_WHILE (308) 63 64
T_PLUSEQ (309) 110
T_MULTEQ (310) 111
T_MINEQ (311) 112 116
T_MAXEQ (312) 113 117
T_PLUSPLUS (313) 105
T_ANDEQ (314) 114
T_OREQ (315) 115
T_M_INF (316) 166
T_P_INF (317) 165
T_DOUBLE_COLON (318) 124
ID (319) 183
USER_TEXT (320) 182
INT_NUM (321) 149
FLOAT_NUM (322) 150
BOOL_VAL (323) 148
NEG (324)


Nonterminals, with rules where they appear

$accept (93)
    on left: 0
prog (94)
    on left: 1 2, on right: 0 2
proc_def (95)
    on left: 3, on right: 2
proc_head (96)
    on left: 4 5, on right: 3
proc_name (97)
    on left: 6, on right: 4 5
arg_declist1 (98)
    on left: 7 8, on right: 4 5
arg_declist (99)
    on left: 9 10, on right: 8 10
arg_declist2 (100)
    on left: 11 12, on right: 5 12
proc_return_opt (101)
    on left: 13 14, on right: 4 5
proc_return (102)
    on left: 15, on right: 14
arg_decl (103)
    on left: 16, on right: 9 10 11 12
arg_target (104)
    on left: 17, on right: 16
typedecl (105)
    on left: 18 19 20 21 22, on right: 16 100 101
graph_type (106)
    on left: 23, on right: 19
prim_type (107)
    on left: 24 25 26 27 28, on right: 15 18 36 37 129
nodeedge_type (108)
    on left: 29 30, on right: 21
node_type (109)
    on left: 31, on right: 29
edge_type (110)
    on left: 32, on right: 30
set_type (111)
    on left: 33 34 35, on right: 22
property (112)
    on left: 36 37, on right: 20
id_comma_list (113)
    on left: 38 39, on right: 17 39 102
proc_body (114)
    on left: 40, on right: 3
sent_block (115)
    on left: 41, on right: 40 48 63 64 80 81 83 84 86 87
sb_begin (116)
    on left: 42, on right: 41
sb_end (117)
    on left: 43, on right: 41
sent_list (118)
    on left: 44 45, on right: 41 45
sent (119)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61, on right:
    45 65 66 121 122
sent_call (120)
    on left: 62, on right: 58
sent_while (121)
    on left: 63, on right: 54
sent_do_while (122)
    on left: 64, on right: 53
sent_foreach (123)
    on left: 65 66, on right: 49
foreach_header (124)
    on left: 67 68 69, on right: 65 66
foreach_filter (125)
    on left: 70 71, on right: 65 66
iterator1 (126)
    on left: 72 73 74 75 76 77 78 79, on right: 67 68 69 130 131 132
    133
sent_dfs (127)
    on left: 80, on right: 57
sent_bfs (128)
    on left: 81, on right: 56
dfs_post (129)
    on left: 82 83 84, on right: 80
bfs_reverse (130)
    on left: 85 86 87, on right: 81
bfs_header_format (131)
    on left: 88, on right: 80 81
opt_tp (132)
    on left: 89 90, on right: 88
from_or_semi (133)
    on left: 91 92, on right: 88
bfs_filters (134)
    on left: 93 94 95 96 97, on right: 80 81
bfs_navigator (135)
    on left: 98, on right: 94 96 97
bfs_filter (136)
    on left: 99, on right: 83 86 95 96 97
sent_variable_decl (137)
    on left: 100 101, on right: 47
var_target (138)
    on left: 102, on right: 100
sent_assignment (139)
    on left: 103, on right: 46
sent_reduce_assignment (140)
    on left: 104 105, on right: 51
sent_defer_assignment (141)
    on left: 106, on right: 52
sent_argminmax_assignment (142)
    on left: 107, on right: 60
optional_bind (143)
    on left: 108 109, on right: 104 105 106 107
reduce_eq (144)
    on left: 110 111 112 113 114 115, on right: 104
minmax_eq (145)
    on left: 116 117, on right: 107
rhs (146)
    on left: 118, on right: 101 103 104 106
sent_return (147)
    on left: 119 120, on right: 55
sent_if (148)
    on left: 121 122, on right: 50
sent_user (149)
    on left: 123 124, on right: 59
expr (150)
    on left: 125 126 127 128 129 130 131 132 133 134 135 136 137 138
    139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154
    155, on right: 98 99 118 119 125 126 127 128 129 130 131 132 134
    135 136 137 138 139 140 141 142 143 144 145 146 147 156 177 178
    180
bool_expr (151)
    on left: 156, on right: 63 64 71 121 122
reduce_op (152)
    on left: 157 158 159 160 161 162 163, on right: 130 131
reduce_op2 (153)
    on left: 164, on right: 132 133
inf (154)
    on left: 165 166, on right: 151
lhs (155)
    on left: 167 168, on right: 103 104 105 106 169 170 179
lhs_list (156)
    on left: 169 170, on right: 124 170 179
scala (157)
    on left: 171, on right: 152 167
field (158)
    on left: 172, on right: 153 168
built_in (159)
    on left: 173 174, on right: 62 154
arg_list (160)
    on left: 175 176, on right: 173 174
expr_list (161)
    on left: 177 178, on right: 175 178 180
lhs_list2 (162)
    on left: 179, on right: 107
rhs_list2 (163)
    on left: 180, on right: 107
expr_user (164)
    on left: 182, on right: 123 124 155
$@1 (165)
    on left: 181, on right: 182
id (166)
    on left: 183, on right: 6 31 32 33 34 35 36 37 38 39 67 68 69 79
    88 101 109 130 131 132 133 171 172 173 174


state 0

    0 $accept: . prog $end

    $default  reduce using rule 1 (prog)

    prog  go to state 1


state 1

    0 $accept: prog . $end
    2 prog: prog . proc_def

    $end    shift, and go to state 2
    T_PROC  shift, and go to state 3

    proc_def   go to state 4
    proc_head  go to state 5
    proc_name  go to state 6


state 2

    0 $accept: prog $end .

    $default  accept


state 3

    6 proc_name: T_PROC . id

    ID  shift, and go to state 7

    id  go to state 8


state 4

    2 prog: prog proc_def .

    $default  reduce using rule 2 (prog)


state 5

    3 proc_def: proc_head . proc_body

    '{'  shift, and go to state 9

    proc_body   go to state 10
    sent_block  go to state 11
    sb_begin    go to state 12


state 6

    4 proc_head: proc_name . '(' arg_declist1 ')' proc_return_opt
    5          | proc_name . '(' arg_declist1 ';' arg_declist2 ')' proc_return_opt

    '('  shift, and go to state 13


state 7

  183 id: ID .

    $default  reduce using rule 183 (id)


state 8

    6 proc_name: T_PROC id .

    $default  reduce using rule 6 (proc_name)


state 9

   42 sb_begin: '{' .

    $default  reduce using rule 42 (sb_begin)


state 10

    3 proc_def: proc_head proc_body .

    $default  reduce using rule 3 (proc_def)


state 11

   40 proc_body: sent_block .

    $default  reduce using rule 40 (proc_body)


state 12

   41 sent_block: sb_begin . sent_list sb_end

    $default  reduce using rule 44 (sent_list)

    sent_list  go to state 14


state 13

    4 proc_head: proc_name '(' . arg_declist1 ')' proc_return_opt
    5          | proc_name '(' . arg_declist1 ';' arg_declist2 ')' proc_return_opt

    ID  shift, and go to state 7

    $default  reduce using rule 7 (arg_declist1)

    arg_declist1   go to state 15
    arg_declist    go to state 16
    arg_decl       go to state 17
    arg_target     go to state 18
    id_comma_list  go to state 19
    id             go to state 20


state 14

   41 sent_block: sb_begin sent_list . sb_end
   45 sent_list: sent_list . sent

    T_GRAPH     shift, and go to state 21
    T_NODE      shift, and go to state 22
    T_NODEPROP  shift, and go to state 23
    T_EDGE      shift, and go to state 24
    T_EDGEPROP  shift, and go to state 25
    T_NSET      shift, and go to state 26
    T_NORDER    shift, and go to state 27
    T_NSEQ      shift, and go to state 28
    T_DFS       shift, and go to state 29
    T_INT       shift, and go to state 30
    T_FLOAT     shift, and go to state 31
    T_BOOL      shift, and go to state 32
    T_DOUBLE    shift, and go to state 33
    T_LONG      shift, and go to state 34
    T_RETURN    shift, and go to state 35
    T_BFS       shift, and go to state 36
    T_FOREACH   shift, and go to state 37
    T_FOR       shift, and go to state 38
    T_IF        shift, and go to state 39
    T_DO        shift, and go to state 40
    T_WHILE     shift, and go to state 41
    ID          shift, and go to state 7
    '<'         shift, and go to state 42
    ';'         shift, and go to state 43
    '{'         shift, and go to state 9
    '}'         shift, and go to state 44
    '['         shift, and go to state 45

    typedecl                   go to state 46
    graph_type                 go to state 47
    prim_type                  go to state 48
    nodeedge_type              go to state 49
    node_type                  go to state 50
    edge_type                  go to state 51
    set_type                   go to state 52
    property                   go to state 53
    sent_block                 go to state 54
    sb_begin                   go to state 12
    sb_end                     go to state 55
    sent                       go to state 56
    sent_call                  go to state 57
    sent_while                 go to state 58
    sent_do_while              go to state 59
    sent_foreach               go to state 60
    sent_dfs                   go to state 61
    sent_bfs                   go to state 62
    sent_variable_decl         go to state 63
    sent_assignment            go to state 64
    sent_reduce_assignment     go to state 65
    sent_defer_assignment      go to state 66
    sent_argminmax_assignment  go to state 67
    sent_return                go to state 68
    sent_if                    go to state 69
    sent_user                  go to state 70
    lhs                        go to state 71
    scala                      go to state 72
    field                      go to state 73
    built_in                   go to state 74
    lhs_list2                  go to state 75
    expr_user                  go to state 76
    id                         go to state 77


state 15

    4 proc_head: proc_name '(' arg_declist1 . ')' proc_return_opt
    5          | proc_name '(' arg_declist1 . ';' arg_declist2 ')' proc_return_opt

    ')'  shift, and go to state 78
    ';'  shift, and go to state 79


state 16

    8 arg_declist1: arg_declist .
   10 arg_declist: arg_declist . ',' arg_decl

    ','  shift, and go to state 80

    $default  reduce using rule 8 (arg_declist1)


state 17

    9 arg_declist: arg_decl .

    $default  reduce using rule 9 (arg_declist)


state 18

   16 arg_decl: arg_target . ':' typedecl

    ':'  shift, and go to state 81


state 19

   17 arg_target: id_comma_list .
   39 id_comma_list: id_comma_list . ',' id

    ','  shift, and go to state 82

    $default  reduce using rule 17 (arg_target)


state 20

   38 id_comma_list: id .

    $default  reduce using rule 38 (id_comma_list)


state 21

   23 graph_type: T_GRAPH .

    $default  reduce using rule 23 (graph_type)


state 22

   31 node_type: T_NODE . '(' id ')'

    '('  shift, and go to state 83


state 23

   36 property: T_NODEPROP . '<' prim_type '>' '(' id ')'

    '<'  shift, and go to state 84


state 24

   32 edge_type: T_EDGE . '(' id ')'

    '('  shift, and go to state 85


state 25

   37 property: T_EDGEPROP . '<' prim_type '>' '(' id ')'

    '<'  shift, and go to state 86


state 26

   33 set_type: T_NSET . '(' id ')'

    '('  shift, and go to state 87


state 27

   35 set_type: T_NORDER . '(' id ')'

    '('  shift, and go to state 88


state 28

   34 set_type: T_NSEQ . '(' id ')'

    '('  shift, and go to state 89


state 29

   80 sent_dfs: T_DFS . bfs_header_format bfs_filters sent_block dfs_post

    '('  shift, and go to state 90

    bfs_header_format  go to state 91


state 30

   24 prim_type: T_INT .

    $default  reduce using rule 24 (prim_type)


state 31

   26 prim_type: T_FLOAT .

    $default  reduce using rule 26 (prim_type)


state 32

   28 prim_type: T_BOOL .

    $default  reduce using rule 28 (prim_type)


state 33

   27 prim_type: T_DOUBLE .

    $default  reduce using rule 27 (prim_type)


state 34

   25 prim_type: T_LONG .

    $default  reduce using rule 25 (prim_type)


state 35

  119 sent_return: T_RETURN . expr
  120            | T_RETURN .

    T_SUM      shift, and go to state 92
    T_PRODUCT  shift, and go to state 93
    T_MIN      shift, and go to state 94
    T_MAX      shift, and go to state 95
    T_COUNT    shift, and go to state 96
    T_ALL      shift, and go to state 97
    T_EXIST    shift, and go to state 98
    T_AVG      shift, and go to state 99
    T_M_INF    shift, and go to state 100
    T_P_INF    shift, and go to state 101
    ID         shift, and go to state 7
    INT_NUM    shift, and go to state 102
    FLOAT_NUM  shift, and go to state 103
    BOOL_VAL   shift, and go to state 104
    '-'        shift, and go to state 105
    '('        shift, and go to state 106
    '['        shift, and go to state 45
    '|'        shift, and go to state 107
    '!'        shift, and go to state 108

    $default  reduce using rule 120 (sent_return)

    expr        go to state 109
    reduce_op   go to state 110
    reduce_op2  go to state 111
    inf         go to state 112
    scala       go to state 113
    field       go to state 114
    built_in    go to state 115
    expr_user   go to state 116
    id          go to state 77


state 36

   81 sent_bfs: T_BFS . bfs_header_format bfs_filters sent_block bfs_reverse

    '('  shift, and go to state 90

    bfs_header_format  go to state 117


state 37

   65 sent_foreach: T_FOREACH . foreach_header foreach_filter sent

    '('  shift, and go to state 118

    foreach_header  go to state 119


state 38

   66 sent_foreach: T_FOR . foreach_header foreach_filter sent

    '('  shift, and go to state 118

    foreach_header  go to state 120


state 39

  121 sent_if: T_IF . '(' bool_expr ')' sent
  122        | T_IF . '(' bool_expr ')' sent T_ELSE sent

    '('  shift, and go to state 121


state 40

   64 sent_do_while: T_DO . sent_block T_WHILE '(' bool_expr ')'

    '{'  shift, and go to state 9

    sent_block  go to state 122
    sb_begin    go to state 12


state 41

   63 sent_while: T_WHILE . '(' bool_expr ')' sent_block

    '('  shift, and go to state 123


state 42

  179 lhs_list2: '<' . lhs ';' lhs_list '>'

    ID  shift, and go to state 7

    lhs    go to state 124
    scala  go to state 72
    field  go to state 73
    id     go to state 125


state 43

   61 sent: ';' .

    $default  reduce using rule 61 (sent)


state 44

   43 sb_end: '}' .

    $default  reduce using rule 43 (sb_end)


state 45

  182 expr_user: '[' . $@1 USER_TEXT ']'

    $default  reduce using rule 181 ($@1)

    $@1  go to state 126


state 46

  100 sent_variable_decl: typedecl . var_target
  101                   | typedecl . id '=' rhs

    ID  shift, and go to state 7

    id_comma_list  go to state 127
    var_target     go to state 128
    id             go to state 129


state 47

   19 typedecl: graph_type .

    $default  reduce using rule 19 (typedecl)


state 48

   18 typedecl: prim_type .

    $default  reduce using rule 18 (typedecl)


state 49

   21 typedecl: nodeedge_type .

    $default  reduce using rule 21 (typedecl)


state 50

   29 nodeedge_type: node_type .

    $default  reduce using rule 29 (nodeedge_type)


state 51

   30 nodeedge_type: edge_type .

    $default  reduce using rule 30 (nodeedge_type)


state 52

   22 typedecl: set_type .

    $default  reduce using rule 22 (typedecl)


state 53

   20 typedecl: property .

    $default  reduce using rule 20 (typedecl)


state 54

   48 sent: sent_block .

    $default  reduce using rule 48 (sent)


state 55

   41 sent_block: sb_begin sent_list sb_end .

    $default  reduce using rule 41 (sent_block)


state 56

   45 sent_list: sent_list sent .

    $default  reduce using rule 45 (sent_list)


state 57

   58 sent: sent_call . ';'

    ';'  shift, and go to state 130


state 58

   54 sent: sent_while .

    $default  reduce using rule 54 (sent)


state 59

   53 sent: sent_do_while . ';'

    ';'  shift, and go to state 131


state 60

   49 sent: sent_foreach .

    $default  reduce using rule 49 (sent)


state 61

   57 sent: sent_dfs .

    $default  reduce using rule 57 (sent)


state 62

   56 sent: sent_bfs .

    $default  reduce using rule 56 (sent)


state 63

   47 sent: sent_variable_decl . ';'

    ';'  shift, and go to state 132


state 64

   46 sent: sent_assignment . ';'

    ';'  shift, and go to state 133


state 65

   51 sent: sent_reduce_assignment . ';'

    ';'  shift, and go to state 134


state 66

   52 sent: sent_defer_assignment . ';'

    ';'  shift, and go to state 135


state 67

   60 sent: sent_argminmax_assignment . ';'

    ';'  shift, and go to state 136


state 68

   55 sent: sent_return . ';'

    ';'  shift, and go to state 137


state 69

   50 sent: sent_if .

    $default  reduce using rule 50 (sent)


state 70

   59 sent: sent_user . ';'

    ';'  shift, and go to state 138


state 71

  103 sent_assignment: lhs . '=' rhs
  104 sent_reduce_assignment: lhs . reduce_eq rhs optional_bind
  105                       | lhs . T_PLUSPLUS optional_bind
  106 sent_defer_assignment: lhs . T_LE rhs optional_bind

    T_LE        shift, and go to state 139
    T_PLUSEQ    shift, and go to state 140
    T_MULTEQ    shift, and go to state 141
    T_MINEQ     shift, and go to state 142
    T_MAXEQ     shift, and go to state 143
    T_PLUSPLUS  shift, and go to state 144
    T_ANDEQ     shift, and go to state 145
    T_OREQ      shift, and go to state 146
    '='         shift, and go to state 147

    reduce_eq  go to state 148


state 72

  167 lhs: scala .

    $default  reduce using rule 167 (lhs)


state 73

  168 lhs: field .

    $default  reduce using rule 168 (lhs)


state 74

   62 sent_call: built_in .

    $default  reduce using rule 62 (sent_call)


state 75

  107 sent_argminmax_assignment: lhs_list2 . minmax_eq rhs_list2 optional_bind

    T_MINEQ  shift, and go to state 149
    T_MAXEQ  shift, and go to state 150

    minmax_eq  go to state 151


state 76

  123 sent_user: expr_user .
  124          | expr_user . T_DOUBLE_COLON '[' lhs_list ']'

    T_DOUBLE_COLON  shift, and go to state 152

    $default  reduce using rule 123 (sent_user)


state 77

  171 scala: id .
  172 field: id . '.' id
  173 built_in: id . '.' id arg_list
  174         | id . arg_list

    '('  shift, and go to state 153
    '.'  shift, and go to state 154

    $default  reduce using rule 171 (scala)

    arg_list  go to state 155


state 78

    4 proc_head: proc_name '(' arg_declist1 ')' . proc_return_opt

    ':'  shift, and go to state 156

    $default  reduce using rule 13 (proc_return_opt)

    proc_return_opt  go to state 157
    proc_return      go to state 158


state 79

    5 proc_head: proc_name '(' arg_declist1 ';' . arg_declist2 ')' proc_return_opt

    ID  shift, and go to state 7

    arg_declist2   go to state 159
    arg_decl       go to state 160
    arg_target     go to state 18
    id_comma_list  go to state 19
    id             go to state 20


state 80

   10 arg_declist: arg_declist ',' . arg_decl

    ID  shift, and go to state 7

    arg_decl       go to state 161
    arg_target     go to state 18
    id_comma_list  go to state 19
    id             go to state 20


state 81

   16 arg_decl: arg_target ':' . typedecl

    T_GRAPH     shift, and go to state 21
    T_NODE      shift, and go to state 22
    T_NODEPROP  shift, and go to state 23
    T_EDGE      shift, and go to state 24
    T_EDGEPROP  shift, and go to state 25
    T_NSET      shift, and go to state 26
    T_NORDER    shift, and go to state 27
    T_NSEQ      shift, and go to state 28
    T_INT       shift, and go to state 30
    T_FLOAT     shift, and go to state 31
    T_BOOL      shift, and go to state 32
    T_DOUBLE    shift, and go to state 33
    T_LONG      shift, and go to state 34

    typedecl       go to state 162
    graph_type     go to state 47
    prim_type      go to state 48
    nodeedge_type  go to state 49
    node_type      go to state 50
    edge_type      go to state 51
    set_type       go to state 52
    property       go to state 53


state 82

   39 id_comma_list: id_comma_list ',' . id

    ID  shift, and go to state 7

    id  go to state 163


state 83

   31 node_type: T_NODE '(' . id ')'

    ID  shift, and go to state 7

    id  go to state 164


state 84

   36 property: T_NODEPROP '<' . prim_type '>' '(' id ')'

    T_INT     shift, and go to state 30
    T_FLOAT   shift, and go to state 31
    T_BOOL    shift, and go to state 32
    T_DOUBLE  shift, and go to state 33
    T_LONG    shift, and go to state 34

    prim_type  go to state 165


state 85

   32 edge_type: T_EDGE '(' . id ')'

    ID  shift, and go to state 7

    id  go to state 166


state 86

   37 property: T_EDGEPROP '<' . prim_type '>' '(' id ')'

    T_INT     shift, and go to state 30
    T_FLOAT   shift, and go to state 31
    T_BOOL    shift, and go to state 32
    T_DOUBLE  shift, and go to state 33
    T_LONG    shift, and go to state 34

    prim_type  go to state 167


state 87

   33 set_type: T_NSET '(' . id ')'

    ID  shift, and go to state 7

    id  go to state 168


state 88

   35 set_type: T_NORDER '(' . id ')'

    ID  shift, and go to state 7

    id  go to state 169


state 89

   34 set_type: T_NSEQ '(' . id ')'

    ID  shift, and go to state 7

    id  go to state 170


state 90

   88 bfs_header_format: '(' . id ':' id opt_tp '.' T_NODES from_or_semi id ')'

    ID  shift, and go to state 7

    id  go to state 171


state 91

   80 sent_dfs: T_DFS bfs_header_format . bfs_filters sent_block dfs_post

    '('  shift, and go to state 172
    '['  shift, and go to state 173

    $default  reduce using rule 93 (bfs_filters)

    bfs_filters    go to state 174
    bfs_navigator  go to state 175
    bfs_filter     go to state 176


state 92

  157 reduce_op: T_SUM .

    $default  reduce using rule 157 (reduce_op)


state 93

  158 reduce_op: T_PRODUCT .

    $default  reduce using rule 158 (reduce_op)


state 94

  159 reduce_op: T_MIN .

    $default  reduce using rule 159 (reduce_op)


state 95

  160 reduce_op: T_MAX .

    $default  reduce using rule 160 (reduce_op)


state 96

  164 reduce_op2: T_COUNT .

    $default  reduce using rule 164 (reduce_op2)


state 97

  162 reduce_op: T_ALL .

    $default  reduce using rule 162 (reduce_op)


state 98

  161 reduce_op: T_EXIST .

    $default  reduce using rule 161 (reduce_op)


state 99

  163 reduce_op: T_AVG .

    $default  reduce using rule 163 (reduce_op)


state 100

  166 inf: T_M_INF .

    $default  reduce using rule 166 (inf)


state 101

  165 inf: T_P_INF .

    $default  reduce using rule 165 (inf)


state 102

  149 expr: INT_NUM .

    $default  reduce using rule 149 (expr)


state 103

  150 expr: FLOAT_NUM .

    $default  reduce using rule 150 (expr)


state 104

  148 expr: BOOL_VAL .

    $default  reduce using rule 148 (expr)


state 105

  127 expr: '-' . expr

    T_SUM      shift, and go to state 92
    T_PRODUCT  shift, and go to state 93
    T_MIN      shift, and go to state 94
    T_MAX      shift, and go to state 95
    T_COUNT    shift, and go to state 96
    T_ALL      shift, and go to state 97
    T_EXIST    shift, and go to state 98
    T_AVG      shift, and go to state 99
    T_M_INF    shift, and go to state 100
    T_P_INF    shift, and go to state 101
    ID         shift, and go to state 7
    INT_NUM    shift, and go to state 102
    FLOAT_NUM  shift, and go to state 103
    BOOL_VAL   shift, and go to state 104
    '-'        shift, and go to state 105
    '('        shift, and go to state 106
    '['        shift, and go to state 45
    '|'        shift, and go to state 107
    '!'        shift, and go to state 108

    expr        go to state 177
    reduce_op   go to state 110
    reduce_op2  go to state 111
    inf         go to state 112
    scala       go to state 113
    field       go to state 114
    built_in    go to state 115
    expr_user   go to state 116
    id          go to state 77


state 106

  125 expr: '(' . expr ')'
  129     | '(' . prim_type ')' expr

    T_INT      shift, and go to state 30
    T_FLOAT    shift, and go to state 31
    T_BOOL     shift, and go to state 32
    T_DOUBLE   shift, and go to state 33
    T_LONG     shift, and go to state 34
    T_SUM      shift, and go to state 92
    T_PRODUCT  shift, and go to state 93
    T_MIN      shift, and go to state 94
    T_MAX      shift, and go to state 95
    T_COUNT    shift, and go to state 96
    T_ALL      shift, and go to state 97
    T_EXIST    shift, and go to state 98
    T_AVG      shift, and go to state 99
    T_M_INF    shift, and go to state 100
    T_P_INF    shift, and go to state 101
    ID         shift, and go to state 7
    INT_NUM    shift, and go to state 102
    FLOAT_NUM  shift, and go to state 103
    BOOL_VAL   shift, and go to state 104
    '-'        shift, and go to state 105
    '('        shift, and go to state 106
    '['        shift, and go to state 45
    '|'        shift, and go to state 107
    '!'        shift, and go to state 108
